--- a/composer.json
+++ b/composer.json
@@ -1,25 +1,29 @@
 {
     "name": "certificationy/certificationy-cli",
-    "type": "library",
+    "type": "project",
     "description": "A CLI tool to train on Symfony certification",
-    "keywords": ["symfony", "certification", "cli", "test", "exam"],
+    "keywords": ["symfony", "certification", "cli", "test", "exam", "certy"],
     "homepage": "http://github.com/certificationy/certificationy-cli",
     "license": "MIT",
     "authors": [
         {
             "name": "Vincent Composieux",
             "email": "vincent.composieux@gmail.com"
+        },
+        {
+            "name": "Cas Leentfaar",
+            "email": "info@casleentfaar.com"
         }
     ],
     "require": {
         "php": ">=5.3.3",
-        "certificationy/certificationy": ">=1.0"
+        "certy/certy": "1.0.x-dev"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.1"
     },
     "autoload": {
-        "psr-4": { "Certificationy\\Cli\\": "" }
+        "psr-4": { "Certificationy\\": "src/" }
     },
     "extra": {
         "branch-alias": {
