--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
     ],
     "require": {
         "php": ">=5.3.3",
-        "certy/certy": "1.0.x-dev"
+        "certy/certy": "1.0.x-dev",
+        "certy/certy-loader": "1.0.x-dev"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.1"
